# ComputerRL

./: PROXY_GUIDELINE.md  README.md  README_zh.md  lib_run_single.py  pyproject.toml  run_autoglm.py  run_autoglm_v.py  run_computerrl.py  run_computerrl_v.py  run_multienv_autoglm_v.py  run_multienv_computerrl.py  run_multienv_computerrl_v.py
desktop_env/: desktop_env.py
desktop_env/evaluators/metrics/: __init__.py
desktop_env/providers/: __init__.py
evaluation_examples/: test_office.json
evaluation_examples/examples_office/ow-docx/: ow-docx-0-0.json  ow-docx-0-1.json  ow-docx-0-10.json  ow-docx-0-11.json  ow-docx-0-12.json  ow-docx-0-13.json  ow-docx-0-14.json  ow-docx-0-15.json  ow-docx-0-16.json  ow-docx-0-17.json  ow-docx-0-18.json  ow-docx-0-19.json  ow-docx-0-2.json  ow-docx-0-20.json  ow-docx-0-21.json  ow-docx-0-22.json  ow-docx-0-23.json  ow-docx-0-24.json  ow-docx-0-25.json  ow-docx-0-26.json  ow-docx-0-27.json  ow-docx-0-28.json  ow-docx-0-29.json  ow-docx-0-3.json  ow-docx-0-4.json  ow-docx-0-5.json  ow-docx-0-6.json  ow-docx-0-7.json  ow-docx-0-8.json  ow-docx-0-9.json  ow-docx-1-0.json  ow-docx-1-1.json  ow-docx-1-10.json  ow-docx-1-11.json  ow-docx-1-12.json  ow-docx-1-13.json  ow-docx-1-14.json  ow-docx-1-15.json  ow-docx-1-16.json  ow-docx-1-17.json  (+20 more)
evaluation_examples/examples_office/ow-pptx/: ow-pptx-0-0.json  ow-pptx-0-1.json  ow-pptx-0-10.json  ow-pptx-0-11.json  ow-pptx-0-12.json  ow-pptx-0-13.json  ow-pptx-0-14.json  ow-pptx-0-15.json  ow-pptx-0-16.json  ow-pptx-0-17.json  ow-pptx-0-18.json  ow-pptx-0-19.json  ow-pptx-0-2.json  ow-pptx-0-20.json  ow-pptx-0-21.json  ow-pptx-0-22.json  ow-pptx-0-23.json  ow-pptx-0-24.json  ow-pptx-0-25.json  ow-pptx-0-26.json  ow-pptx-0-27.json  ow-pptx-0-28.json  ow-pptx-0-29.json  ow-pptx-0-3.json  ow-pptx-0-30.json  ow-pptx-0-4.json  ow-pptx-0-5.json  ow-pptx-0-6.json  ow-pptx-0-7.json  ow-pptx-0-8.json  ow-pptx-0-9.json  ow-pptx-1-0.json  ow-pptx-1-1.json  ow-pptx-1-10.json  ow-pptx-1-11.json  ow-pptx-1-12.json  ow-pptx-1-13.json  ow-pptx-1-14.json  ow-pptx-1-15.json  ow-pptx-1-16.json  (+20 more)
evaluation_examples/examples_office/ow-xlsx/: ow-xlsx-0-0.json  ow-xlsx-0-1.json  ow-xlsx-0-10.json  ow-xlsx-0-11.json  ow-xlsx-0-12.json  ow-xlsx-0-13.json  ow-xlsx-0-14.json  ow-xlsx-0-15.json  ow-xlsx-0-16.json  ow-xlsx-0-17.json  ow-xlsx-0-18.json  (+49 more)
mm_agents/autoglm_v/: main.py
mm_agents/computerrl/: __init__.py  main.py
mm_agents/computerrl_v/: main.py
(+5 files in other folders)
